@@ -1,3 +1,7 @@
+2005-10-27  Per Bothner  <per@bothner.com>
+
+	* Language.java (detect): New methods.
+
 2005-10-19  Per Bothner  <per@bothner.com>
 
 	* Declaration.java (makeField): Handle an unnamed declaration.
